Anhanced feature:

- edit_module <module_name> now ask if you want to create the module if it does not exists and pre-fill the files.
- pmanager import <module_name> now has pre-fill option to ease the module creation